# graphfind-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: file_io.rs  filter_map.rs  graph.rs  lib.rs  print.rs  query.rs
src/file_io_backends/: mod.rs  petgraph.rs
src/graph/: file_io.rs  graph_helpers.rs  graph_trait.rs  mod.rs  print.rs
src/graph_backends/: adj_graphs.rs  filter_map.rs  graph_helpers.rs  mod.rs  petgraph.rs
src/pattern_matching/: algorithm.rs  matcher.rs  mod.rs  pattern.rs  vf_algorithms.rs
src/petgraph/: file_io.rs  graph.rs  mod.rs  pattern_graphs.rs  print.rs
src/print_backends/: mod.rs  petgraph.rs
src/query_algorithms/: mod.rs  pattern_graphs.rs  vf_algorithms.rs
tests/: borrow.rs  person_graph_types.rs  petgraph.rs  test_filter_map.rs  test_graph_trait.rs  test_pat_match.rs  test_print.rs  test_serde_json.rs  trivial.rs
tests/common/: mod.rs
