[package]
name = "rustgql"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for Petgraph backend
petgraph = {version = "0.6", features=["serde-1"]}
# for Serde (+ JSON) to read/write from files
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
# for Test directories (experimental)
test_dir = "0.2"
# to print graphs
graphviz-rust = "0.5"
# for VF2 algorithm core set
bimap = "0.6"